# db-tui

./: Cargo.toml  README.md
src/: args.rs  main.rs  strings.rs  tui.rs
src/keys/: key_config.rs  key_list.rs  mod.rs
src/tabs/: db_connecitons_tab.rs  db_connections_tab.rs  db_databases_tab.rs  db_tables_tab.rs  db_types_tab.rs  mod.rs
src/ui/: mod.rs  style.rs
src/ui/connection_popup/: mod.rs
src/ui/quit_confirm_popup/: mod.rs
