[package]
name = "db-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo", "env"] }
crossterm = { version = "0.27.0", features = ["serde"] }
dirs = "5.0.1"
log = "0.4.21"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
ron = "0.8.1"
serde = "1.0.198"
simplelog = "0.12.2"
sqlx = { version = "0.7.4", features = ["all-databases"] }
struct-patch = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tui-input = "0.8.0"
tui-logger = { version = "0.11.0", features = ["crossterm", "tracing"] }
tui-textarea = "0.4.0"
unicode-truncate = "0.2.0"
unicode-width = "0.1.11"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
